feat: update jwt configuration to use es256